# translator

./: .env.local  .env.prod  .env.stage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  Translator.postman_collection.json  backend.dockerfile  bandit.yaml  docker-compose.yml  init_data.py  main.py  pyproject.toml
.github/backup/: build-deploy.yml
.github/workflows/: deploy.yml
config/: config.py
core/: celery.py  deps.py  security.py  utils.py
crud/: __init__.py  base.py  crud_translator.py  crud_user.py
db/: init_db.py  session.py
models/: translator.py  user.py
route/: login.py  translator.py  users.py
schemas/: __init__.py  translator.py
service/: trans.py
tasks/: google.py
tests/: conftest.py  test_asset.py  test_login.py  test_users.py
tests/utils/: asset.py  auth.py  db.py  user.py  utils.py
